log/log20150930164925.txt
=======================================[2015-09-30 16:49:25]========================================
:get address
抄读通信地址为:987654321012
发:68 AA AA AA AA AA AA 68 13 00 DF 16
收:68 12 10 32 54 76 98 68 93 06 45 43 65 87 A9 CB 07 16
命令执行成功！
=======================================[2015-09-30 16:49:32]========================================
:get time	功能码:[04 00 01 02]
抄读时间为 17:11:50
发:68 12 10 32 54 76 98 68 11 04 35 34 33 37 6E 16
收:68 12 10 32 54 76 98 68 91 07 35 34 33 37 83 44 4A 02 16
命令执行成功！
=======================================[2015-09-30 16:50:13]========================================
:set address 111111111111
写通信地址参数为 111111111111
发:68 AA AA AA AA AA AA 68 15 06 44 44 44 44 44 44 7F 16
收:68 11 11 11 11 11 11 68 95 00 CB 16
命令执行成功！
=======================================[2015-09-30 16:50:16]========================================
:get address
抄读通信地址为:111111111111
发:68 AA AA AA AA AA AA 68 13 00 DF 16
收:68 11 11 11 11 11 11 68 93 06 44 44 44 44 44 44 67 16
命令执行成功！
=======================================[2015-09-30 16:50:18]========================================
:get time	功能码:[04 00 01 02]
抄读时间为 17:12:36
发:68 11 11 11 11 11 11 68 11 04 35 34 33 37 1E 16
收:68 11 11 11 11 11 11 68 91 07 35 34 33 37 69 45 4A 99 16
命令执行成功！
=======================================[2015-09-30 16:50:20]========================================
:get time	功能码:[04 00 01 02]
抄读时间为 17:12:38
发:68 11 11 11 11 11 11 68 11 04 35 34 33 37 1E 16
收:68 11 11 11 11 11 11 68 91 07 35 34 33 37 6B 45 4A 9B 16
命令执行成功！
=======================================[2015-09-30 16:50:37]========================================
:set time 165040	功能码:[04 00 01 02]
写时间参数为 16:50:40
发:68 11 11 11 11 11 11 68 14 0F 35 34 33 37 37 33 33 33 34 33 33 33 73 83 49 08 16
收:68 11 11 11 11 11 11 68 94 00 CA 16
命令执行成功！
=======================================[2015-09-30 16:50:40]========================================
:get time	功能码:[04 00 01 02]
抄读时间为 16:50:42
发:68 11 11 11 11 11 11 68 11 04 35 34 33 37 1E 16
收:68 11 11 11 11 11 11 68 91 07 35 34 33 37 75 83 49 E2 16
命令执行成功！
=======================================[2015-09-30 16:50:42]========================================
:get time	功能码:[04 00 01 02]
抄读时间为 16:50:44
发:68 11 11 11 11 11 11 68 11 04 35 34 33 37 1E 16
收:68 11 11 11 11 11 11 68 91 07 35 34 33 37 77 83 49 E4 16
命令执行成功！
=======================================[2015-09-30 16:50:43]========================================
:get time	功能码:[04 00 01 02]
抄读时间为 16:50:45
发:68 11 11 11 11 11 11 68 11 04 35 34 33 37 1E 16
收:68 11 11 11 11 11 11 68 91 07 35 34 33 37 78 83 49 E5 16
命令执行成功！
=======================================[2015-09-30 16:50:45]========================================
:get time	功能码:[04 00 01 02]
抄读时间为 16:50:47
发:68 11 11 11 11 11 11 68 11 04 35 34 33 37 1E 16
收:68 11 11 11 11 11 11 68 91 07 35 34 33 37 7A 83 49 E7 16
命令执行成功！
=======================================[2015-09-30 16:50:46]========================================
:get time	功能码:[04 00 01 02]
抄读时间为 16:50:48
发:68 11 11 11 11 11 11 68 11 04 35 34 33 37 1E 16
收:68 11 11 11 11 11 11 68 91 07 35 34 33 37 7B 83 49 E8 16
命令执行成功！
Exception in Tkinter callback
Traceback (most recent call last):
  File "C:\Python34\lib\tkinter\__init__.py", line 1533, in __call__
    return self.func(*args)
  File "E:\my_project\navigator\navigator_window.py", line 140, in runScript
    exec(command)
  File "<string>", line 1
    :get address
    ^
SyntaxError: invalid syntax
Exception in Tkinter callback
Traceback (most recent call last):
  File "C:\Python34\lib\tkinter\__init__.py", line 1533, in __call__
    return self.func(*args)
  File "E:\my_project\navigator\navigator_window.py", line 140, in runScript
    exec(command)
  File "<string>", line 1
    :get address
    ^
SyntaxError: invalid syntax
Exception in Tkinter callback
Traceback (most recent call last):
  File "C:\Python34\lib\tkinter\__init__.py", line 1533, in __call__
    return self.func(*args)
  File "E:\my_project\navigator\navigator_window.py", line 140, in runScript
    exec(command)
  File "<string>", line 1
    :get address
    ^
SyntaxError: invalid syntax
Exception in Tkinter callback
Traceback (most recent call last):
  File "C:\Python34\lib\tkinter\__init__.py", line 1533, in __call__
    return self.func(*args)
  File "E:\my_project\navigator\navigator_window.py", line 140, in runScript
  File "<string>", line 1, in <module>
NameError: name 'psend' is not defined
Exception in Tkinter callback
Traceback (most recent call last):
  File "C:\Python34\lib\tkinter\__init__.py", line 1533, in __call__
    return self.func(*args)
  File "E:\my_project\navigator\navigator_window.py", line 140, in runScript
  File "<string>", line 1, in <module>
NameError: name 'psend' is not defined
Exception in Tkinter callback
Traceback (most recent call last):
  File "C:\Python34\lib\tkinter\__init__.py", line 1533, in __call__
    return self.func(*args)
  File "E:\my_project\navigator\navigator_window.py", line 140, in runScript
  File "<string>", line 1, in <module>
NameError: name 'psend' is not defined
Exception in Tkinter callback
Traceback (most recent call last):
  File "C:\Python34\lib\tkinter\__init__.py", line 1533, in __call__
    return self.func(*args)
  File "E:\my_project\navigator\navigator_window.py", line 140, in runScript
  File "<string>", line 1, in <module>
NameError: name 'psend' is not defined
Exception in Tkinter callback
Traceback (most recent call last):
  File "C:\Python34\lib\tkinter\__init__.py", line 1533, in __call__
    return self.func(*args)
  File "E:\my_project\navigator\navigator_window.py", line 140, in runScript
  File "<string>", line 1, in <module>
NameError: name 'psend' is not defined
Exception in Tkinter callback
Traceback (most recent call last):
  File "C:\Python34\lib\tkinter\__init__.py", line 1533, in __call__
    return self.func(*args)
  File "E:\my_project\navigator\navigator_window.py", line 140, in runScript
  File "<string>", line 1, in <module>
NameError: name 'psend' is not defined
why?
why?
why?
why?
